[gd_scene load_steps=4 format=3 uid="uid://dc10vja5ywjhy"]

[ext_resource type="Texture2D" uid="uid://bepsnna1vjo0o" path="res://assets/gfx/inventory/slot.png" id="1_ri8pl"]
[ext_resource type="Script" path="res://code/player/inventory_slot.gd" id="2_mcvlj"]
[ext_resource type="PackedScene" uid="uid://bwc2o387frc2f" path="res://scenes/actors/player/inventory_tooltip.tscn" id="3_gfdth"]

[node name="AspectRatioContainer" type="AspectRatioContainer"]
z_as_relative = false
offset_right = 167.0
offset_bottom = 164.0
script = ExtResource("2_mcvlj")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 2
texture = ExtResource("1_ri8pl")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Control2" type="VBoxContainer" parent="TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.5
mouse_filter = 2

[node name="Control4" type="Control" parent="TextureRect/HBoxContainer/Control2"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Control5" type="TextureRect" parent="TextureRect/HBoxContainer/Control2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.5
mouse_filter = 2

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/Control2/Control5"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "####"
horizontal_alignment = 2

[node name="Control6" type="Control" parent="TextureRect/HBoxContainer/Control2"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Control" parent="TextureRect/HBoxContainer/Control2/Control6" instance=ExtResource("3_gfdth")]
z_index = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Control3" type="Control" parent="TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[connection signal="mouse_entered" from="TextureRect" to="." method="show_tooltip"]
[connection signal="mouse_exited" from="TextureRect" to="." method="hide_tooltip"]
